// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly color=black 1`] = `
<div
  className="faded-bg hide"
/>
`;

exports[`renders correctly didScroll=false 1`] = `
<div
  className="faded-bg faded-white hide"
/>
`;

exports[`renders correctly didScroll=true 1`] = `
<div
  className="faded-bg faded-white"
/>
`;

exports[`renders correctly no props 1`] = `
<div
  className="faded-bg faded-white hide"
/>
`;
